crates/parser/tests/cases/snapshots/cases__parse_ast__type_array.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(type_array), types::parse_type_desc,\n           \"Array<address, 25>\")"

---
Node(
  kind: Generic(
    base: Node(
      kind: "Array",
      span: Span(
        start: 0,
        end: 5,
      ),
    ),
    args: Node(
      kind: [
        TypeDesc(Node(
          kind: Base(
            base: "address",
          ),
          span: Span(
            start: 6,
            end: 13,
          ),
        )),
        Int(Node(
          kind: 25,
          span: Span(
            start: 15,
            end: 17,
          ),
        )),
      ],
      span: Span(
        start: 5,
        end: 18,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 18,
  ),
)
