crates/parser/tests/cases/snapshots/cases__parse_ast__use_nested2.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(use_nested2), module::parse_use,\n           r#\"use std::bar::{\n    bing::*,\n    bad::{food as burger, barge::*, bill::bob::{jkl::*}},\n    evm as mve\n}\"#)"

---
Node(
  kind: Use(
    tree: Node(
      kind: Nested(
        prefix: Path(
          segments: [
            Node(
              kind: "std",
              span: Span(
                start: 4,
                end: 7,
              ),
            ),
            Node(
              kind: "bar",
              span: Span(
                start: 9,
                end: 12,
              ),
            ),
          ],
        ),
        children: [
          Node(
            kind: Glob(
              prefix: Path(
                segments: [
                  Node(
                    kind: "bing",
                    span: Span(
                      start: 20,
                      end: 24,
                    ),
                  ),
                ],
              ),
            ),
            span: Span(
              start: 20,
              end: 24,
            ),
          ),
          Node(
            kind: Nested(
              prefix: Path(
                segments: [
                  Node(
                    kind: "bad",
                    span: Span(
                      start: 33,
                      end: 36,
                    ),
                  ),
                ],
              ),
              children: [
                Node(
                  kind: Simple(
                    path: Path(
                      segments: [
                        Node(
                          kind: "food",
                          span: Span(
                            start: 39,
                            end: 43,
                          ),
                        ),
                      ],
                    ),
                    rename: Some(Node(
                      kind: "burger",
                      span: Span(
                        start: 47,
                        end: 53,
                      ),
                    )),
                  ),
                  span: Span(
                    start: 39,
                    end: 53,
                  ),
                ),
                Node(
                  kind: Glob(
                    prefix: Path(
                      segments: [
                        Node(
                          kind: "barge",
                          span: Span(
                            start: 55,
                            end: 60,
                          ),
                        ),
                      ],
                    ),
                  ),
                  span: Span(
                    start: 55,
                    end: 60,
                  ),
                ),
                Node(
                  kind: Nested(
                    prefix: Path(
                      segments: [
                        Node(
                          kind: "bill",
                          span: Span(
                            start: 65,
                            end: 69,
                          ),
                        ),
                        Node(
                          kind: "bob",
                          span: Span(
                            start: 71,
                            end: 74,
                          ),
                        ),
                      ],
                    ),
                    children: [
                      Node(
                        kind: Glob(
                          prefix: Path(
                            segments: [
                              Node(
                                kind: "jkl",
                                span: Span(
                                  start: 77,
                                  end: 80,
                                ),
                              ),
                            ],
                          ),
                        ),
                        span: Span(
                          start: 77,
                          end: 80,
                        ),
                      ),
                    ],
                  ),
                  span: Span(
                    start: 83,
                    end: 84,
                  ),
                ),
              ],
            ),
            span: Span(
              start: 84,
              end: 85,
            ),
          ),
          Node(
            kind: Simple(
              path: Path(
                segments: [
                  Node(
                    kind: "evm",
                    span: Span(
                      start: 91,
                      end: 94,
                    ),
                  ),
                ],
              ),
              rename: Some(Node(
                kind: "mve",
                span: Span(
                  start: 98,
                  end: 101,
                ),
              )),
            ),
            span: Span(
              start: 91,
              end: 101,
            ),
          ),
        ],
      ),
      span: Span(
        start: 102,
        end: 103,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 103,
  ),
)
